@startuml

abstract class Mail {
    +buildMessage()
    +calculateSize()
    +toString()
}

class SecretMail {
    +buildMessage()
    +calculateSize()
}

class CompressedMail {
    -compression
    +buildMessage()
    +calculateSize()
}

class MailList

Mail <|-- SecretMail
Mail <|-- CompressedMail

MailList --> Mail

@enduml
